# amaze

./: CMakeLists.txt  Makefile  README.md
shaders/: gridshader.frag  gridshader.vert  wallshader.frag  wallshader.vert  wireframe.vert
src/: amaze.cpp  amaze.h  main.cpp  matrix.h
src/imgui/: imconfig.h  imgui_impl_opengl3.cpp
src/opengl/: geometry.h  opengl.cpp  opengl.h
